setup endpoints + connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+server.port=8081
 
+mongodb.database=dbforum
+mongodb.connection.string=mongodb+srv://eliu07:dbapo33@dbforum-data.i7eyb.mongodb.net/dbforum?retryWrites=true&w=majority
